[project]
name = "langgraph-learn"
version = "0.1.0"
description = ""
authors = [
    {name = "Vamshi Krishna Kodimala",email = "102660840+vkrishna03@users.noreply.github.com."}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph (>=0.5.3,<0.6.0)"
]

[tool.poetry]
packages = [{include = "langgraph_learn", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
